--- a/qa-theme/SnowFlat/qa-styles.css
+++ b/qa-theme/SnowFlat/qa-styles.css
@@ -8,6 +8,14 @@
 	Theme License: GPLv2
 */
 
+/* swjaco11 code */
+.user-admin{
+	color: darkred;
+	font-weight: bold;
+}
+
+/*END swjaco11 code */
+
 
 .clearfix, .qa-q-item-clear,
 .qa-nav-main-list, .qa-nav-sub,
