Kolejny upload CSS-ów

--- a/qa-theme/SnowFlat/qa-styles.css
+++ b/qa-theme/SnowFlat/qa-styles.css
@@ -32,7 +32,7 @@
 	font-weight: bold;
 }
 
-.qa-a-item-what a, .qa-a-item-what, .qa-a-item-what a:hover, qa-a-item-what a:focus, qa-a-item-what a{
+.qa-a-item-what a, .qa-a-item-what, .qa-a-item-what a:hover, .qa-a-item-what a:focus, .qa-a-item-what a, .qa-a-item-what a:visited{
 	color: grey;
 }
 
